--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,8 @@
 fastapi==0.104.1
 uvicorn==0.24.0
-python-dotenv==0.19.2
-sqlalchemy==1.4.42
-pydantic>=2.7.49.0
+python-dotenv>=1.0.0
+sqlalchemy==2.0.0
+pydantic==2.7.4
+python-jose==3.3.0
+passlib==1.7.4
+bcrypt==4.0.0
